force-app/main/default/objects/PositionDupe__c/PositionDupe__c.object-meta.xml
<CustomObject>
    <label>PositionDupe</label>
    <nameField>
        <label>PositionDupe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PositionDupes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>