force-app/main/default/objects/PositionDupe__c/fields/ModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ModifiedDate__c</fullName>
    <label>ModifiedDate</label>
    <type>Date</type>
</CustomField>