force-app/main/default/objects/PositionDupe__c/fields/ModifiedUser__c.field-meta.xml
<CustomField>
    <fullName>ModifiedUser__c</fullName>
    <label>ModifiedUser</label>
    <length>30</length>
    <type>Text</type>
</CustomField>