force-app/main/default/objects/PositionDupe__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <label>OldValue</label>
    <length>30</length>
    <type>Text</type>
</CustomField>